# pyqt-app-info

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pyqt_app_info/: __init__.py  _compat.py  info.py  tools.py
src/pyqt_app_info/qt/: __init__.py  about_dialog.py
tests/: test_about_dialog.py  test_compat.py  test_info.py  test_tools.py
